Started on LaTeX vision

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@ foo.*.txt.audit.json
 *.bar*.txt
 *.bar*.txt.audit.json
 .*.swp
+LaTeX-report/.foo.tex.swp
+LaTeX-report/.foo.html.swp
+LaTeX-report/.foo.tex.swp
+LaTeX-report/.vision.tex.swp
+LaTeX-report/vision.aux
+LaTeX-report/vision.dvi
+LaTeX-report/vision.fdb_latexmk
+LaTeX-report/vision.fls
+LaTeX-report/vision.log
+LaTeX-report/vision.pdf
+.gitignore.orig
+LaTeX-report/foo.aux
+LaTeX-report/foo.fdb_latexmk
+LaTeX-report/foo.fls
+LaTeX-report/foo.html
+LaTeX-report/foo.log
+LaTeX-report/foo.pdf
